KubernetesPoPolsku/s01/e10-helm-2/mychart/template-filled.yml
# THIS IS GENERATED WITH: helm template mychart/

---
# Source: mychart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-chart
  labels:
    helm.sh/chart: mychart-0.1.0
    app.kubernetes.io/name: MY-CHART
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: MY-CHART
    app.kubernetes.io/instance: RELEASE-NAME
---
# Source: mychart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-chart
  labels:
    helm.sh/chart: mychart-0.1.0
    app.kubernetes.io/name: MY-CHART
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: MY-CHART
      app.kubernetes.io/instance: RELEASE-NAME
  template:
    metadata:
      labels:
        app.kubernetes.io/name: MY-CHART
        app.kubernetes.io/instance: RELEASE-NAME
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: mychart
          securityContext:
            {}
          image: "tutum/hello-world" #":0.0.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
# Source: mychart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-chart
  labels:
    helm.sh/chart: mychart-0.1.0
    app.kubernetes.io/name: MY-CHART
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "mychart.127.0.0.1.nip.io"
      http:
        paths:
          - path: /
            backend:
              serviceName: my-chart
              servicePort: 80
---
# Source: mychart/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "my-chart-test-connection"
  labels:
    helm.sh/chart: mychart-0.1.0
    app.kubernetes.io/name: MY-CHART
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['my-chart:80']
  restartPolicy: Never
